Fix missed bootstrap var in dark mode. (#1416)

--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -90,6 +90,9 @@
 
   --nav-pills-active-background-color: #27272da1;
   --nav-pills-active-text-color: #fff;
+
+  --bs-body-color: #eaeaea;
+  --bs-secondary-color: #7f7f7f;
 }
 
 [data-theme="dark"] {
